--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,7 @@
 body {
     font-family: "Poppins";
-    background-color: black;
-    background-color: #ff9d00;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%23000' stroke-width='66.7' stroke-opacity='0.05' %3E%3Ccircle fill='%23ff9d00' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%23fb8d17' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%23f47d24' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%23ed6e2d' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%23e35f34' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%23d85239' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%23cc453e' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%23be3941' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%23b02f43' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%23a02644' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%23901e44' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%23801843' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%236f1341' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%235e0f3d' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%234e0c38' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%233e0933' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%232e062c' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%23210024' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
-    background-attachment: fixed;
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-color: white;
+    margin: 0px;
 }
 .minimalButton {
     background-color: crimson;
@@ -108,4 +104,65 @@ body {
     transition: 0.1s;
     outline: 0;
     height: 20px;
+}
+.headerBar{
+    background-color: grey;
+    color: white;
+    margin: 0px;
+    height: 50px;
+    padding-left: 10px;
+    padding-right: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.navigation{
+    position: relative;
+    align-self: center;
+}
+.navigationLink{
+    padding: 10px;
+    transition: 0.3s ease-out;
+    border-radius: 8px;
+}
+.navigationLink:hover{
+    border-radius: 10px;
+    background-color: turquoise;
+    color: black;
+    transition: 0.3s ease-in;
+}
+.loginGroup{
+    position: absolute;
+    right: 0%;
+    padding: 10px;
+}
+.filledButton{
+    padding: 10px;
+    font-family: inherit;
+    background-color: turquoise;
+    color: white;
+    height: fit-content;
+    border-radius: 8px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border: none;
+    margin: 2px;
+}
+.filledButton:hover{
+    background-color: darkturquoise;
+}
+.unfilledButton{
+    padding: 10px;
+    font-family: inherit;
+    background-color: white;
+    color: black;
+    height: fit-content;
+    border-radius: 8px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border: none;
+    margin: 2px;
+}
+.unfilledButton:hover{
+    background-color: rgba(255,255,255,0.7);
 }
